# uDevGames.com

./: Cargo.toml  watch.sh  wsl.sh
app/: app.scss
src/: application_context.rs  main.rs  serve.rs  state.rs  view.rs
src/controllers/: gh_oauth.rs  homepage.rs  jam_entries.rs  jams.rs  mod.rs
src/template_helpers/: mod.rs  user_optional.rs  user_required.rs
templates/: edit_jam.html.tera  error_page.html.tera  homepage.html.tera  layout.html.tera  login.html.tera  logout.html.tera
