[package]
name = "udevgames"
version = "0.1.0"
authors = ["Christopher R. Miller <xpm@mysteriouspants.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ssl and compression handled by nginx router
actix-web = { version = "4.0.0-beta.1", features = [ "secure-cookies" ] }
actix-session = "0.4"
anyhow = "1.0.37"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
diesel = { version = "1.4.5", features = [ "chrono", "sqlite", "r2d2" ] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
hex = "0.4.2"
md5 = "0.7.0"
pulldown-cmark = "0.8.0"
reqwest = { version = "0.11.0", features = [ "json" ] }
serde = { version = "1.0.118", features = [ "derive" ] }
tera = "1.6.1"
thiserror = "1.0.23"

[dev-dependencies]
tempfile = "3.1.0"
